--- a/index.html
+++ b/index.html
@@ -172,7 +172,6 @@
   });
 </script>
 
-<!-- Desktop Portraits -->
 <div class="portrait-wrapper">
   <div class="portrait-column">
     <div class="portrait-container">
@@ -211,7 +210,6 @@
   </div>
 </div>
 
-<!-- Mobile Portrait Row -->
 <div class="portrait-row-mobile">
   <div class="mobile-profile"><p>Drew</p><img src="DREW.png" alt="Drew" class="portrait-img-mobile" onclick="openModal('drew')"></div>
   <div class="mobile-profile"><p>Rob</p><img src="ROB.png" alt="Rob" class="portrait-img-mobile" onclick="openModal('rob')"></div>
@@ -219,42 +217,100 @@
   <div class="mobile-profile"><p>Ty</p><img src="TY.png" alt="Ty" class="portrait-img-mobile" onclick="openModal('ty')"></div>
 </div>
 
-<!-- Mobile Modals -->
 <div id="modal-drew" class="modal">
   <img src="DREW.png" alt="Drew">
   <p>Since his days at Oak Hills High school, Drew has felt challenged to prove/disprove anything difficult to explain. The primary founding member of O.H. S.H.I.T. and a natural investigator, he also enjoys fishing (novice level at best... poser) and being a “Griefer” on GTA V.</p>
   <button class="close-btn" onclick="closeModal('drew')">Close</button>
 </div>
-
 <div id="modal-rob" class="modal">
   <img src="ROB.png" alt="Rob">
   <p>A founding member of O.H. S.H.I.T., his experiences on Buffalo Ridge as a young man coupled with 15 years of witnessing unexplained phenomena in Bars and clubs (he has a staunch belief that ghosts and entities are drawn to gathering places) has driven his curiosity. Unfortunately, curiosity does not equal courage... he’s kind of the team chicken shit.</p>
   <button class="close-btn" onclick="closeModal('rob')">Close</button>
 </div>
-
 <div id="modal-steven" class="modal">
   <img src="STEVEN.png" alt="Steven">
   <p>The Genius of the bunch. The resident IT expert on the Ridge, the team would have a hard time getting on the internet without this cat. Just don’t give him your online passwords or you’ll end up married to a Tai mail order bride looking for U.S. residency. He’s sneaky like that...</p>
   <button class="close-btn" onclick="closeModal('steven')">Close</button>
 </div>
-
 <div id="modal-ty" class="modal">
   <img src="TY.png" alt="Ty">
   <p>The youngest member of the team is also the 3rd of our Oak Hills graduates (Cincinnati’s West Side... Wes-wes yo!) Ty is the research expert for the podcast as well as a founding member of O.H. S.H.I.T.. Just don’t ask him what he’d do for obscene amounts of money... you don’t wanna know.</p>
   <button class="close-btn" onclick="closeModal('ty')">Close</button>
 </div>
-
 <p>NEW EPISODES EVERY THURSDAY.</p>
 <p>Buffalo Ridge is your source for chilling stories, strange events, conspiracy theories, & the unexplained.</p>
 <p><strong>THE FOOL IS THE ONE WHO CLOSES THEIR MIND TO ALTERNATE THEORIES OF THOUGHT. LEAVE YOUR MIND OPEN.</strong></p>
 
+<div class="button-grid">
+  <a href="https://open.spotify.com/show/4iG0SrMt0ATU8rqnAcWy3e" target="_blank" class="ridge-link"><div class="ridge-button">Spotify</div></a>
+  <a href="https://www.youtube.com/channel/UCHDjvZvemkFoVgsXagJYShw" target="_blank" class="ridge-link"><div class="ridge-button">YouTube</div></a>
+  <a href="mailto:rob.auburnviewmedia@gmail.com" class="ridge-link"><div class="ridge-button">Email Us</div></a>
+</div>
+
+<div class="rusty-grid">
+  <img src="rusty_red_button.png" alt="Sound 1" class="rusty-button" onclick="playSound('sound1')">
+  <img src="rusty_red_button.png" alt="Sound 2" class="rusty-button" onclick="playSound('sound2')">
+  <img src="rusty_red_button.png" alt="Sound 3" class="rusty-button" onclick="playSound('sound3')">
+  <img src="rusty_red_button.png" alt="Sound 4" class="rusty-button" onclick="playSound('sound4')">
+</div>
+
+<audio id="sound1" src="sounds/DID YOU SEE THAT.mp3"></audio>
+<audio id="sound2" src="sounds/closet dive.mp3"></audio>
+<audio id="sound3" src="sounds/im cold.mp3"></audio>
+<audio id="sound4" src="sounds/wilhelmscream.mp3"></audio>
+
+<div class="section">
+  <h2>Watch the Latest Episode</h2>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/ARvMdWtVNgQ?si=r9ZAtTNNZaGYOEsF" allowfullscreen></iframe>
+</div>
+
+<div class="section">
+  <h2>Listen to the Latest Episode</h2>
+  <audio controls>
+    <source src="your-latest-episode.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+</div>
+
+<div class="section">
+  <h2>Subscribe to Our Newsletter</h2>
+  <form action="mailto:your@email.com" method="post" enctype="text/plain">
+    <input type="text" name="name" placeholder="Your name" required>
+    <input type="email" name="email" placeholder="Your email" required>
+    <button type="submit">Sign Up</button>
+  </form>
+</div>
+
+<div class="section">
+  <h2>Leave a Comment</h2>
+  <form action="#" method="post">
+    <textarea name="comment" rows="4" placeholder="Your thoughts..."></textarea>
+    <button type="submit">Submit</button>
+  </form>
+  <p style="font-size: 0.9em; opacity: 0.6;">(Comments won't be saved without a backend. Future upgrade!)</p>
+</div>
+
 <script>
+  function playSound(id) {
+    const sounds = document.querySelectorAll('audio');
+    sounds.forEach(audio => {
+      if (audio.id !== id) {
+        audio.pause();
+        audio.currentTime = 0;
+      }
+    });
+    const selected = document.getElementById(id);
+    if (selected) selected.play();
+  }
+
   function openModal(name) {
     document.getElementById('modal-' + name).style.display = 'flex';
   }
+
   function closeModal(name) {
     document.getElementById('modal-' + name).style.display = 'none';
   }
 </script>
+
 </body>
 </html>
