--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       padding: 1rem;
       text-align: center;
     }
+
     .logo {
       height: 400px;
       width: auto;
@@ -24,39 +25,44 @@
       animation: flickerLogo 3.2s infinite;
       filter: grayscale(100%);
     }
+
     @keyframes flickerLogo {
       0%, 5%, 9%, 14%, 20%, 100% { opacity: 1; }
       6%, 10%, 13%, 15% { opacity: 0.5; }
       16%, 19% { opacity: 0.2; }
     }
-    .portrait-img {
-      height: 200px;
-      width: auto;
+
+    .portrait-img, .portrait-img-mobile {
       border-radius: 8px;
       filter: grayscale(100%);
       transition: all 0.4s ease;
       box-shadow: 0 0 12px rgba(0, 0, 0, 0.7);
       animation: flicker 2.7s infinite;
     }
+
+    .portrait-img {
+      height: 200px;
+      width: auto;
+    }
+
     .portrait-img-mobile {
       height: 80px;
       width: auto;
       border-radius: 6px;
-      filter: grayscale(100%);
-      animation: flicker 2.4s infinite;
-      transition: all 0.4s ease;
-      flex-shrink: 1;
     }
+
     .portrait-img-mobile:hover {
       filter: grayscale(0%) brightness(1.1);
       transform: scale(1.05);
     }
+
     @keyframes flicker {
       0%, 19%, 22%, 62%, 64%, 100% { opacity: 1; }
       20%, 21%, 63% { opacity: 0.4; }
       23% { opacity: 0.8; }
       65% { opacity: 0.3; }
     }
+
     .portrait-wrapper {
       display: flex;
       justify-content: center;
@@ -65,18 +71,21 @@
       flex-wrap: wrap;
       margin-bottom: 2rem;
     }
+
     .portrait-column {
       display: flex;
       flex-direction: column;
       align-items: center;
       gap: 1rem;
     }
+
     .portrait-container {
       position: relative;
       display: flex;
       flex-direction: column;
       align-items: center;
     }
+
     .hover-bio {
       position: absolute;
       background-color: rgba(20, 20, 20, 0.95);
@@ -94,11 +103,23 @@
       pointer-events: none;
       animation: flickerBorder 3s infinite;
     }
+
     .portrait-container:hover .hover-bio {
       opacity: 1;
     }
-    .hover-right { left: 105%; top: 50%; transform: translateY(-50%); }
-    .hover-left { right: 105%; top: 50%; transform: translateY(-50%); }
+
+    .hover-right {
+      left: 105%;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+
+    .hover-left {
+      right: 105%;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+
     @keyframes flickerBorder {
       0%, 100% { border-color: #666; box-shadow: 0 0 8px rgba(255,255,255,0.1); }
       10% { border-color: #999; box-shadow: 0 0 12px rgba(255,255,255,0.2); }
@@ -106,14 +127,17 @@
       30% { border-color: #777; box-shadow: 0 0 15px rgba(255,255,255,0.3); }
       40% { border-color: #333; box-shadow: 0 0 6px rgba(255,255,255,0.08); }
     }
+
     .portrait-row-mobile {
       display: none;
     }
+
     .mobile-profile {
       display: flex;
       flex-direction: column;
       align-items: center;
     }
+
     .modal {
       display: none;
       position: fixed;
@@ -128,6 +152,7 @@
       padding: 2rem 1rem;
       text-align: center;
     }
+
     .modal img {
       max-height: 250px;
       width: auto;
@@ -135,11 +160,13 @@
       margin-bottom: 1rem;
       filter: grayscale(100%);
     }
+
     .modal p {
       font-size: 1em;
       max-width: 90vw;
       margin-bottom: 1.5rem;
     }
+
     .close-btn {
       background: #222;
       border: 2px solid #555;
@@ -149,89 +176,8 @@
       border-radius: 6px;
       cursor: pointer;
     }
+
     .close-btn:hover { background: #444; }
-
-    .button-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
-      width: 100%;
-      max-width: 800px;
-      margin: 1.5rem 0 0 0;
-    }
-
-    .ridge-link {
-      text-decoration: none;
-    }
-
-    .ridge-button {
-      background-color: #111;
-      color: #eee;
-      border: 3px solid #444;
-      border-radius: 6px;
-      padding: 20px 10px;
-      font-size: 1.3em;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      text-shadow: 1px 1px 2px black;
-      box-shadow: 0 0 10px #000;
-      transition: background 0.3s, transform 0.2s;
-      cursor: pointer;
-    }
-
-    .ridge-button:hover {
-      background-color: #222;
-      transform: scale(1.05);
-    }
-
-    .rusty-grid {
-      display: flex;
-      justify-content: center;
-      gap: 1.5rem;
-      margin-top: 1rem;
-      flex-wrap: wrap;
-    }
-
-    .rusty-button {
-      width: 80px;
-      height: 80px;
-      cursor: pointer;
-    }
-
-    .section {
-      margin-top: 2rem;
-      max-width: 700px;
-      width: 100%;
-    }
-
-    iframe, audio {
-      width: 100%;
-      margin-top: 1rem;
-      border: none;
-    }
-
-    input, textarea, button {
-      font-family: 'Special Elite', monospace;
-      padding: 10px;
-      margin: 10px 0;
-      width: 100%;
-      max-width: 100%;
-      box-sizing: border-box;
-      border: 2px solid #444;
-      background-color: #111;
-      color: #fff;
-    }
-
-    button {
-      cursor: pointer;
-      background-color: #333;
-      border-radius: 4px;
-      transition: background 0.3s;
-    }
-
-    button:hover {
-      background-color: #555;
-    }
 
     @media (max-width: 768px) {
       .portrait-wrapper { flex-direction: column; align-items: center; }
@@ -245,13 +191,6 @@
         max-width: 90vw;
       }
       .logo { height: 300px; margin-bottom: 0; }
-      .button-grid {
-        grid-template-columns: 1fr;
-      }
-      .ridge-button {
-        font-size: 0.8em;
-        padding: 10px;
-      }
     }
   </style>
 </head>
@@ -267,22 +206,84 @@
   });
 </script>
 
-<!-- Portraits (Desktop + Mobile) + Modals -->
-<!-- [Same portrait + modal HTML as previous Part 1 posted — you can reuse that block here] -->
+<div class="portrait-wrapper">
+  <div class="portrait-column">
+    <div class="portrait-container">
+      <img src="DREW.png" alt="Drew" class="portrait-img">
+      <div class="hover-bio hover-right">
+        Drew – Since his days at Oak Hills High school, Drew has felt challenged to prove/disprove anything difficult to explain. The primary founding member of O.H. S.H.I.T. and a natural investigator, he also enjoys fishing (novice level at best... poser) and being a “Griefer” on GTA V.
+      </div>
+      <p>Drew</p>
+    </div>
+    <div class="portrait-container">
+      <img src="TY.png" alt="Ty" class="portrait-img">
+      <div class="hover-bio hover-right">
+        TY – The youngest member of the team is also the 3rd of our Oak Hills graduates (Cincinnati’s West Side... Wes-wes yo!) Ty is the research expert for the podcast as well as a founding member of O.H. S.H.I.T.. Just don’t ask him what he’d do for obscene amounts of money... you don’t wanna know.
+      </div>
+      <p>Ty</p>
+    </div>
+  </div>
+  <div>
+    <img src="BUFFALO RIDGE LOGO 4.0.png" alt="Buffalo Ridge Logo" class="logo">
+  </div>
+  <div class="portrait-column">
+    <div class="portrait-container">
+      <img src="ROB.png" alt="Rob" class="portrait-img">
+      <div class="hover-bio hover-left">
+        Rob – A founding member of O.H. S.H.I.T., his experiences on Buffalo Ridge as a young man coupled with 15 years of witnessing unexplained phenomena in Bars and clubs (he has a staunch belief that ghosts and entities are drawn to gathering places) has driven his curiosity. Unfortunately, curiosity does not equal courage... he’s kind of the team chicken shit.
+      </div>
+      <p>Rob</p>
+    </div>
+    <div class="portrait-container">
+      <img src="STEVEN.png" alt="Steven" class="portrait-img">
+      <div class="hover-bio hover-left">
+        Steven – The Genius of the bunch. The resident IT expert on the Ridge, the team would have a hard time getting on the internet without this cat. Just don’t give him your online passwords or you’ll end up married to a Tai mail order bride looking for U.S. residency. He’s sneaky like that...
+      </div>
+      <p>Steven</p>
+    </div>
+  </div>
+</div>
 
-<!-- Mid content -->
+<div class="portrait-row-mobile">
+  <div class="mobile-profile"><p>Drew</p><img src="DREW.png" alt="Drew" class="portrait-img-mobile" onclick="openModal('drew')"></div>
+  <div class="mobile-profile"><p>Rob</p><img src="ROB.png" alt="Rob" class="portrait-img-mobile" onclick="openModal('rob')"></div>
+  <div class="mobile-profile"><p>Steven</p><img src="STEVEN.png" alt="Steven" class="portrait-img-mobile" onclick="openModal('steven')"></div>
+  <div class="mobile-profile"><p>Ty</p><img src="TY.png" alt="Ty" class="portrait-img-mobile" onclick="openModal('ty')"></div>
+</div>
+
+<div id="modal-drew" class="modal">
+  <img src="DREW.png" alt="Drew">
+  <p>Since his days at Oak Hills High school, Drew has felt challenged to prove/disprove anything difficult to explain. The primary founding member of O.H. S.H.I.T. and a natural investigator, he also enjoys fishing (novice level at best... poser) and being a “Griefer” on GTA V.</p>
+  <button class="close-btn" onclick="closeModal('drew')">Close</button>
+</div>
+
+<div id="modal-rob" class="modal">
+  <img src="ROB.png" alt="Rob">
+  <p>A founding member of O.H. S.H.I.T., his experiences on Buffalo Ridge as a young man coupled with 15 years of witnessing unexplained phenomena in Bars and clubs (he has a staunch belief that ghosts and entities are drawn to gathering places) has driven his curiosity. Unfortunately, curiosity does not equal courage... he’s kind of the team chicken shit.</p>
+  <button class="close-btn" onclick="closeModal('rob')">Close</button>
+</div>
+
+<div id="modal-steven" class="modal">
+  <img src="STEVEN.png" alt="Steven">
+  <p>The Genius of the bunch. The resident IT expert on the Ridge, the team would have a hard time getting on the internet without this cat. Just don’t give him your online passwords or you’ll end up married to a Tai mail order bride looking for U.S. residency. He’s sneaky like that...</p>
+  <button class="close-btn" onclick="closeModal('steven')">Close</button>
+</div>
+
+<div id="modal-ty" class="modal">
+  <img src="TY.png" alt="Ty">
+  <p>The youngest member of the team is also the 3rd of our Oak Hills graduates (Cincinnati’s West Side... Wes-wes yo!) Ty is the research expert for the podcast as well as a founding member of O.H. S.H.I.T.. Just don’t ask him what he’d do for obscene amounts of money... you don’t wanna know.</p>
+  <button class="close-btn" onclick="closeModal('ty')">Close</button>
+</div>
 <p>NEW EPISODES EVERY THURSDAY.</p>
 <p>Buffalo Ridge is your source for chilling stories, strange events, conspiracy theories, & the unexplained.</p>
 <p><strong>THE FOOL IS THE ONE WHO CLOSES THEIR MIND TO ALTERNATE THEORIES OF THOUGHT. LEAVE YOUR MIND OPEN.</strong></p>
 
-<!-- Buttons -->
 <div class="button-grid">
   <a href="https://open.spotify.com/show/4iG0SrMt0ATU8rqnAcWy3e" target="_blank" class="ridge-link"><div class="ridge-button">Spotify</div></a>
   <a href="https://www.youtube.com/channel/UCHDjvZvemkFoVgsXagJYShw" target="_blank" class="ridge-link"><div class="ridge-button">YouTube</div></a>
   <a href="mailto:rob.auburnviewmedia@gmail.com" class="ridge-link"><div class="ridge-button">Email Us</div></a>
 </div>
 
-<!-- Sounds -->
 <div class="rusty-grid">
   <img src="rusty_red_button.png" alt="Sound 1" class="rusty-button" onclick="playSound('sound1')">
   <img src="rusty_red_button.png" alt="Sound 2" class="rusty-button" onclick="playSound('sound2')">
@@ -295,13 +296,11 @@
 <audio id="sound3" src="sounds/im cold.mp3"></audio>
 <audio id="sound4" src="sounds/wilhelmscream.mp3"></audio>
 
-<!-- Embedded YouTube -->
 <div class="section">
   <h2>Watch the Latest Episode</h2>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/ARvMdWtVNgQ?si=r9ZAtTNNZaGYOEsF" allowfullscreen></iframe>
 </div>
 
-<!-- Podcast Audio -->
 <div class="section">
   <h2>Listen to the Latest Episode</h2>
   <audio controls>
@@ -310,7 +309,6 @@
   </audio>
 </div>
 
-<!-- Newsletter Form -->
 <div class="section">
   <h2>Subscribe to Our Newsletter</h2>
   <form action="mailto:your@email.com" method="post" enctype="text/plain">
@@ -320,7 +318,6 @@
   </form>
 </div>
 
-<!-- Comment Form -->
 <div class="section">
   <h2>Leave a Comment</h2>
   <form action="#" method="post">
@@ -330,7 +327,6 @@
   <p style="font-size: 0.9em; opacity: 0.6;">(Comments won't be saved without a backend. Future upgrade!)</p>
 </div>
 
-<!-- Script -->
 <script>
   function playSound(id) {
     const sounds = document.querySelectorAll('audio');
