--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Buffalo Ridge</title>
   <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+    <!-- Open Graph Meta Tags for Link Previews -->
+  <meta property="og:title" content="Buffalo Ridge Podcast" />
+  <meta property="og:description" content="Uncover eerie encounters, ghost stories, and the unexplained from deep within Buffalo Ridge." />
+  <meta property="og:image" content="https://dickofdeath.github.io/Buffalo-Ridge/assets/BUFFALO%20RIDGE%20LOGO%204.0.png" />
+  <meta property="og:url" content="https://dickofdeath.github.io/Buffalo-Ridge/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card Preview -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Buffalo Ridge Podcast" />
+  <meta name="twitter:description" content="Uncover eerie encounters, ghost stories, and the unexplained from deep within Buffalo Ridge." />
+  <meta name="twitter:image" content="https://dickofdeath.github.io/Buffalo-Ridge/assets/BUFFALO%20RIDGE%20LOGO%204.0.png" />
+
   <style>
     body {
       margin: 0;
