--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <!-- Open Graph Meta Tags for Link Previews -->
   <meta property="og:title" content="Buffalo Ridge Podcast" />
   <meta property="og:description" content="Uncover eerie encounters, ghost stories, and the unexplained from deep within Buffalo Ridge." />
-  <meta property="og:image" content="https://github.com/DickofDeath/Buffalo-Ridge/blob/main/BR%20LINK%20PREVIEW.png" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/DickofDeath/Buffalo-Ridge/main/BR%20LINK%20PREVIEW.png
+" />
   <meta property="og:url" content="https://dickofdeath.github.io/Buffalo-Ridge/" />
   <meta property="og:type" content="website" />
 
