--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <!-- Open Graph Meta Tags for Link Previews -->
   <meta property="og:title" content="Buffalo Ridge Podcast" />
   <meta property="og:description" content="Uncover eerie encounters, ghost stories, and the unexplained from deep within Buffalo Ridge." />
-  <meta property="og:image" content="https://raw.githubusercontent.com/DickofDeath/Buffalo-Ridge/main/BR%20LINK%20PREVIEW.png
-" />
+  <meta property="og:image" content="https://dickofdeath.github.io/Buffalo-Ridge/assets/link-preview.png" />
   <meta property="og:url" content="https://dickofdeath.github.io/Buffalo-Ridge/" />
   <meta property="og:type" content="website" />
 
@@ -17,7 +16,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Buffalo Ridge Podcast" />
   <meta name="twitter:description" content="Uncover eerie encounters, ghost stories, and the unexplained from deep within Buffalo Ridge." />
-  <meta name="twitter:image" content="https://dickofdeath.github.io/Buffalo-Ridge/assets/BUFFALO%20RIDGE%20LOGO%204.0.png" />
+  <meta name="twitter:image" content="https://dickofdeath.github.io/Buffalo-Ridge/assets/link-preview.png" />
 
   <style>
     body {
