--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Buffalo Ridge</title>
   <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
-    <!-- Open Graph Meta Tags for Link Previews -->
+<link rel="canonical" href="https://buffaloridgepodcast.com/" />
   <meta property="og:title" content="Buffalo Ridge Podcast" />
   <meta property="og:description" content="Uncover eerie encounters, ghost stories, and the unexplained from deep within Buffalo Ridge." />
   <meta property="og:image" content="https://dickofdeath.github.io/Buffalo-Ridge/assets/link-preview.png" />
