--- a/index.html
+++ b/index.html
@@ -329,8 +329,8 @@
 <p><strong>THE FOOL IS THE ONE WHO CLOSES THEIR MIND TO ALTERNATE THEORIES OF THOUGHT. LEAVE YOUR MIND OPEN.</strong></p>
 
 <div class="button-grid">
-  <a href="https://open.spotify.com/show/4iG0SrMt0ATU8rqnAcWy3e" target="_blank" class="ridge-link"><div class="ridge-button">Spotify</div></a>
-  <a href="https://www.youtube.com/channel/UCHDjvZvemkFoVgsXagJYShw" target="_blank" class="ridge-link"><div class="ridge-button">YouTube</div></a>
+  <a href="https://open.spotify.com/episode/4FHbksuCkFU1O8nu0ZZ87x?si=ad730f0b4f4343db" target="_blank" class="ridge-link"><div class="ridge-button">Spotify</div></a>
+  <a href="https://youtu.be/5bzqTNVjTe0?si=oyj0c8kc0zAIuagD"_blank" class="ridge-link"><div class="ridge-button">YouTube</div></a>
   <a href="mailto:rob.auburnviewmedia@gmail.com" class="ridge-link"><div class="ridge-button">Email Us</div></a>
 </div>
 
@@ -348,7 +348,7 @@
 
 <div class="section">
   <h2>Watch the Latest Episode</h2>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/ARvMdWtVNgQ?si=r9ZAtTNNZaGYOEsF" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://youtu.be/5bzqTNVjTe0?si=oyj0c8kc0zAIuagD" allowfullscreen></iframe>
 </div>
 
 <div class="section">
