--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 </div>
 
 <div class="section">
-  <h2>Listen to the Latest Episode</h2>
+  <h2>Listen to the Latest Episode on Amazon Music!</h2>
   <audio controls>
     <source src="your-latest-episode.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
