--- a/index.html
+++ b/index.html
@@ -352,12 +352,11 @@
 </div>
 
 <div class="section">
-  <h2>Listen to the Latest Episode on Amazon Music!</h2>
-  <audio controls>
-    <source src="your-latest-episode.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
+  <a href="https://music.amazon.com/podcasts/fe8785d7-a7f8-45f2-9491-0911a472154d/buffalo-ridge" target="_blank" class="ridge-link">
+    <div class="ridge-button">Listen to the Latest Episode on Amazon Music!</div>
+  </a>
 </div>
+
 
 <div class="section">
   <h2>Subscribe to Our Newsletter</h2>
