--- a/index.html
+++ b/index.html
@@ -353,7 +353,9 @@
 
 <div class="section">
   <a href="https://music.amazon.com/podcasts/fe8785d7-a7f8-45f2-9491-0911a472154d/buffalo-ridge" target="_blank" class="ridge-link">
-    <div class="ridge-button">Listen to the Latest Episode on Amazon Music!</div>
+    <div class="ridge-button" style="background-color: #800000; border-color: #aa0000;">
+      CLICK HERE!<br>TO LISTEN ON AMAZON MUSIC
+    </div>
   </a>
 </div>
 
