--- a/index.html
+++ b/index.html
@@ -2,31 +2,27 @@
 <html lang="en">
 <head>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-0TZ1JZLW48"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-0TZ1JZLW48');
-</script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0TZ1JZLW48"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-0TZ1JZLW48');
+  </script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Buffalo Ridge</title>
   <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
-<link rel="canonical" href="https://buffaloridgepodcast.com/" />
+  <link rel="canonical" href="https://buffaloridgepodcast.com/" />
   <meta property="og:title" content="Buffalo Ridge Podcast" />
   <meta property="og:description" content="Uncover eerie encounters, ghost stories, and the unexplained from deep within Buffalo Ridge." />
   <meta property="og:image" content="https://dickofdeath.github.io/Buffalo-Ridge/assets/link-preview.png" />
   <meta property="og:url" content="https://dickofdeath.github.io/Buffalo-Ridge/" />
   <meta property="og:type" content="website" />
-
-  <!-- Twitter Card Preview -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Buffalo Ridge Podcast" />
   <meta name="twitter:description" content="Uncover eerie encounters, ghost stories, and the unexplained from deep within Buffalo Ridge." />
   <meta name="twitter:image" content="https://dickofdeath.github.io/Buffalo-Ridge/assets/link-preview.png" />
-
   <style>
     body {
       margin: 0;
@@ -172,7 +168,6 @@
       cursor: pointer;
     }
     .close-btn:hover { background: #444; }
-
     .button-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
@@ -240,7 +235,6 @@
       transition: background 0.3s;
     }
     button:hover { background-color: #555; }
-
     @media (max-width: 768px) {
       .portrait-wrapper { flex-direction: column; align-items: center; }
       .portrait-column { display: none; }
@@ -254,6 +248,14 @@
       }
       .logo { height: 300px; margin-bottom: 0; }
     }
+    #disqus_thread {
+      max-width: 800px;
+      width: 100%;
+      margin-top: 3rem;
+      background-color: #111;
+      padding: 2rem;
+      border-radius: 8px;
+    }
   </style>
 </head>
 <body>
@@ -266,7 +268,6 @@
     window.removeEventListener('click', enableAudio);
   });
 </script>
-
 <div class="portrait-wrapper">
   <div class="portrait-column">
     <div class="portrait-container">
@@ -332,15 +333,20 @@
   <p>The youngest member of the team is also the 3rd of our Oak Hills graduates (Cincinnati’s West Side... Wes-wes yo!) Ty is the research expert for the podcast as well as a founding member of O.H. S.H.I.T.. Just don’t ask him what he’d do for obscene amounts of money... you don’t wanna know.</p>
   <button class="close-btn" onclick="closeModal('ty')">Close</button>
 </div>
-
 <p>NEW EPISODES EVERY THURSDAY.</p>
 <p>Buffalo Ridge is your source for chilling stories, strange events, conspiracy theories, & the unexplained.</p>
 <p><strong>THE FOOL IS THE ONE WHO CLOSES THEIR MIND TO ALTERNATE THEORIES OF THOUGHT. LEAVE YOUR MIND OPEN.</strong></p>
 
 <div class="button-grid">
-  <a href="https://open.spotify.com/episode/4FHbksuCkFU1O8nu0ZZ87x?si=ad730f0b4f4343db" target="_blank" class="ridge-link"><div class="ridge-button">Spotify</div></a>
-  <a href="https://youtu.be/5bzqTNVjTe0?si=oyj0c8kc0zAIuagD"_blank" class="ridge-link"><div class="ridge-button">YouTube</div></a>
-  <a href="mailto:rob.auburnviewmedia@gmail.com" class="ridge-link"><div class="ridge-button">Email Us</div></a>
+  <a href="https://open.spotify.com/episode/4FHbksuCkFU1O8nu0ZZ87x?si=ad730f0b4f4343db" target="_blank" class="ridge-link">
+    <div class="ridge-button">Spotify</div>
+  </a>
+  <a href="https://youtu.be/5bzqTNVjTe0?si=oyj0c8kc0zAIuagD" target="_blank" class="ridge-link">
+    <div class="ridge-button">YouTube</div>
+  </a>
+  <a href="mailto:rob.auburnviewmedia@gmail.com" class="ridge-link">
+    <div class="ridge-button">Email Us</div>
+  </a>
 </div>
 
 <div class="rusty-grid">
@@ -367,54 +373,44 @@
     </div>
   </a>
 </div>
-
-
-<div class="section">
-  <h2>Subscribe to Our Newsletter</h2>
-  <form action="mailto:your@email.com" method="post" enctype="text/plain">
-    <input type="text" name="name" placeholder="Your name" required>
-    <input type="email" name="email" placeholder="Your email" required>
-    <button type="submit">Sign Up</button>
-  </form>
-</div>
-
-<div class="section">
-  <h2>Leave a Comment</h2>
-  <form action="#" method="post">
-    <textarea name="comment" rows="4" placeholder="Your thoughts..."></textarea>
-    <button type="submit">Submit</button>
-  </form>
-  <p style="font-size: 0.9em; opacity: 0.6;">(Comments won't be saved without a backend. Future upgrade!)</p>
-</div>
+<div id="disqus_thread"></div>
+<script>
+  var disqus_config = function () {
+    this.page.url = window.location.href;
+    this.page.identifier = window.location.pathname;
+  };
+  (function() {
+    var d = document, s = d.createElement('script');
+    s.src = 'https://example.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+  })();
+</script>
+<noscript>Please enable JavaScript to view the comments powered by Disqus.</noscript>
 
 <script>
-  function playSound(id) {
-    const sounds = document.querySelectorAll('audio');
-    sounds.forEach(audio => {
-      if (audio.id !== id) {
-        audio.pause();
-        audio.currentTime = 0;
-      }
-    });
-    const selected = document.getElementById(id);
-    if (selected) selected.play();
-  }
-
-  function openModal(name) {
-    document.getElementById('modal-' + name).style.display = 'flex';
-  }
-
-  function closeModal(name) {
-    document.getElementById('modal-' + name).style.display = 'none';
-  }
-
-  window.addEventListener("load", () => {
-    if (window.innerWidth <= 768) {
-      document.querySelector(".portrait-row-mobile").style.display = "flex";
+function playSound(id) {
+  const sounds = document.querySelectorAll('audio');
+  sounds.forEach(audio => {
+    if (audio.id !== id) {
+      audio.pause();
+      audio.currentTime = 0;
     }
   });
+  const selected = document.getElementById(id);
+  if (selected) selected.play();
+}
+function openModal(name) {
+  document.getElementById('modal-' + name).style.display = 'flex';
+}
+function closeModal(name) {
+  document.getElementById('modal-' + name).style.display = 'none';
+}
+window.addEventListener("load", () => {
+  if (window.innerWidth <= 768) {
+    document.querySelector(".portrait-row-mobile").style.display = "flex";
+  }
+});
 </script>
-
 </body>
 </html>
-
