--- a/index.html
+++ b/index.html
@@ -373,6 +373,18 @@
     </div>
   </a>
 </div>
+  <div class="section">
+  <h2>Comments</h2>
+  <script src="https://utteranc.es/client.js"
+    repo="DickofDeath/Buffalo-Ridge-Comments"
+    issue-term="pathname"
+    label="comments"
+    theme="github-dark"
+    crossorigin="anonymous"
+    async>
+  </script>
+</div>
+
 <script>
 function playSound(id) {
   const sounds = document.querySelectorAll('audio');
