--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 
 <div class="section">
   <h2>Watch the Latest Episode</h2>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/5bzqTNVjTe0?si=UsFAoZDSZ9wzzcNA" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/QwswnlLOzyY?si=XUkNI8rT_r-LxqC2" allowfullscreen></iframe>
 </div>
 
 <div class="section">
