--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 
 <div class="section">
   <h2>Watch the Latest Episode</h2>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/bV1srvLZf0E?si=vV2uFItMZlUBRBuT" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/Qx5fpBaC_SQ?si=D_OwtSmD5DZRBibG" allowfullscreen></iframe>
 </div>
 
 <div class="section">
