--- a/index.html
+++ b/index.html
@@ -356,10 +356,10 @@
   <img src="rusty_red_button.png" alt="Sound 4" class="rusty-button" onclick="playSound('sound4')">
 </div>
 
-<audio id="sound1" src="sounds/DID YOU SEE THAT.mp3"></audio>
-<audio id="sound2" src="sounds/closet dive.mp3"></audio>
-<audio id="sound3" src="sounds/im cold.mp3"></audio>
-<audio id="sound4" src="sounds/wilhelmscream.mp3"></audio>
+<audio id="sound1" src="sounds/oh my god.mp3"></audio>
+<audio id="sound2" src="sounds/D in my B.mp3"></audio>
+<audio id="sound3" src="sounds/closet dive.mp3"></audio>
+<audio id="sound4" src="sounds/DID YOU SEE THAT.mp3"></audio>
 
 <div class="section">
   <h2>Watch the Latest Episode</h2>
