--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 <p><strong>THE FOOL IS THE ONE WHO CLOSES THEIR MIND TO ALTERNATE THEORIES OF THOUGHT. LEAVE YOUR MIND OPEN.</strong></p>
 
 <div class="button-grid">
-  <a href="https://open.spotify.com/episode/4FHbksuCkFU1O8nu0ZZ87x?si=ad730f0b4f4343db" target="_blank" class="ridge-link">
+  <a href="https://open.spotify.com/show/4iG0SrMt0ATU8rqnAcWy3e" target="_blank" class="ridge-link">
     <div class="ridge-button">Spotify</div>
   </a>
   <a href="https://youtu.be/5bzqTNVjTe0?si=oyj0c8kc0zAIuagD" target="_blank" class="ridge-link">
