--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
   <a href="https://open.spotify.com/show/4iG0SrMt0ATU8rqnAcWy3e" target="_blank" class="ridge-link">
     <div class="ridge-button">Spotify</div>
   </a>
-  <a href="https://youtu.be/5bzqTNVjTe0?si=oyj0c8kc0zAIuagD" target="_blank" class="ridge-link">
+  <a href="https://www.youtube.com/@Buffalo-Ridge" target="_blank" class="ridge-link">
     <div class="ridge-button">YouTube</div>
   </a>
   <a href="mailto:rob.auburnviewmedia@gmail.com" class="ridge-link">
